--- a/bookStore/src/main/resources/templates/bookRegister.html
+++ b/bookStore/src/main/resources/templates/bookRegister.html
@@ -23,7 +23,7 @@
                 <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="available_books">Available Books</a>
+                <a class="nav-link text-white" href="getAllBooks">Available Books</a>
             </li>
 
             <li class="nav-item">
@@ -39,24 +39,24 @@
 
 <div class="container my-5 p-5" style="border:1px solid black;">
 <h4 class="text-center"> New Book Register</h4>
-    <form class="col-md-4 offset-md-4">
+    <form class="col-md-4 offset-md-4"  th:action="@{/create}"     th:object="${book}" method="post">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name"  placeholder="Enter Name" name="name">
+            <input type="text" class="form-control" id="name"  placeholder="Enter Name" th:field="${book.name}">
         </div>
 
         <div class="form-group">
             <label for="author">Author</label>
-            <input type="text" class="form-control" id="author"  placeholder="Enter author" name="author">
+            <input type="text" class="form-control" id="author"  placeholder="Enter author" th:field="${book.author}">
         </div>
 
 
         <div class="form-group">
             <label for="price">Price</label>
-            <input type="text" class="form-control" id="price"  placeholder="Enter price" name="price">
+            <input type="text" class="form-control" id="price"  placeholder="Enter price" th:field="${book.price}">
         </div>
 
-      <center>  <button type="submit" class="btn btn-primary">Submit</button></center>
+      <center>  <button type="submit" class="btn btn-primary" >Submit</button></center>
     </form>
 
 </div>
