--- a/bookStore/src/main/resources/templates/home.html
+++ b/bookStore/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
                 <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="available_books">Available Books</a>
+                <a class="nav-link text-white" href="getAllBooks">Available Books</a>
             </li>
 
             <li class="nav-item">
