--- a/bookStore/src/main/resources/templates/bookRegister.html
+++ b/bookStore/src/main/resources/templates/bookRegister.html
@@ -56,6 +56,12 @@
             <input type="text" class="form-control" id="price"  placeholder="Enter price" th:field="${book.price}">
         </div>
 
+        <div class="form-group">
+            <label for="price">Story</label>
+            <input type="text" class="form-control" id="story"  placeholder="Enter story" th:field="${book.story}">
+        </div>
+
+
       <center>  <button type="submit" class="btn btn-primary" >Submit</button></center>
     </form>
 
