--- a/bookStore/src/main/resources/templates/bookDetails.html
+++ b/bookStore/src/main/resources/templates/bookDetails.html
@@ -28,12 +28,6 @@
 
             <div th:object="${book}">
 
-                <div class="row mb-3">
-                    <label class="col-sm-4 col-form-label">ID</label>
-                    <div class="col-sm-8">
-                        <input readonly  class="form-control-plaintext" th:value="${book.id}">
-                    </div>
-                </div>
 
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label">Name</label>
@@ -42,22 +36,15 @@
                     </div>
                 </div>
 
-                <div class="row mb-3">
-                    <label class="col-sm-4 col-form-label">price</label>
-                    <div class="col-sm-8">
-                        <input class="form-control-plaintext" th:field="${book.price}">
-                    </div>
-                </div>
+
+
 
                 <div class="row mb-3">
-                    <label class="col-sm-4 col-form-label">author</label>
+                    <label class="col-sm-4 col-form-label">Story</label>
                     <div class="col-sm-8">
-                        <input class="form-control-plaintext" th:field="${book.author}">
+                        <input class="form-control-plaintext" th:field="${book.story}">
                     </div>
                 </div>
-
-
-
 
             </div>
 
