add book to myBooksList

--- a/bookStore/src/main/resources/templates/myAddedBooks.html
+++ b/bookStore/src/main/resources/templates/myAddedBooks.html
@@ -11,29 +11,7 @@
     <title>Book Store!</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand text-white" href="#">Book Store</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="/getAllBooks">Available Books</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="/AddToMyBooks">My Books</a>
-            </li>
-        </ul>
-        <div>
-            <a class="nav-link text-white" href="/book_register">New Book Register</a>
-        </div>
-    </div>
-</nav>
 
 <div class="container text-center my-5">
     <table class="table table-striped table-hover">
@@ -53,10 +31,9 @@
             <td th:text="${book.author}"></td>
             <td th:text="${book.price}"></td>
             <td><a th:href="@{/bookDetails/{id}(id=${book.id})}" class="btn btn-primary">View Book Story</a>
-                <a th:href="@{/update/{id}(id=${book.id})}" class="btn btn-success">Update</a>
-                <a th:href="@{/deleteBook/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
-                <a th:href="@{/mylist/{id}(id=${book.id})}" class="btn btn-danger">Add To My Books</a>
-            </td>
+           <a th:href="@{/bookDetails/{id}(id=${book.id})}" class="btn btn-danger">Delete from list</a>
+           </td>
+
         </tr>
         </tbody>
     </table>
