remove book from myBooksList

--- a/bookStore/src/main/resources/templates/bookList.html
+++ b/bookStore/src/main/resources/templates/bookList.html
@@ -55,7 +55,7 @@
             <td><a th:href="@{/bookDetails/{id}(id=${book.id})}" class="btn btn-primary">View Book Story</a>
                 <a th:href="@{/update/{id}(id=${book.id})}" class="btn btn-success">Update</a>
                 <a th:href="@{/deleteBook/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
-                <a th:href="@{/mylist/{id}(id=${book.id})}" class="btn btn-danger">Add To My Books</a>
+                <a th:href="@{/mylist/{id}(id=${book.id})}" class="btn btn-warning">Add To My Books</a>
             </td>
         </tr>
         </tbody>
